<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="voipot.jnu.conoz.com.voipotguide.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/fragmentLogin"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="35dp"
            android:text="@string/loginText"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnTripStart"
            android:layout_width="186dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:background="@drawable/round_shape_blue"
            android:text="@string/loginBtnText"
            android:textAlignment="center"
            android:textColor="@color/indigo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/loginBottomText"
            android:textColor="@color/indigo"
            android:textSize="10sp" />
    </LinearLayout>
</layout>